# pardus-2011-den-kalanlar

gfxtheme-pardus-0.11.4/: Makefile  config
gfxtheme-pardus-0.11.4/data-boot/: gfxboot.cfg
gfxtheme-pardus-0.11.4/data-install/: gfxboot.cfg  languages
gfxtheme-pardus-0.11.4/help-install/: el.html  ja.html  pl.html  sv.html  uk.html  zh_CN.html  zh_TW.html
gfxtheme-pardus-0.11.4/po/: bootloader.pot  ca.po  de.po  es.po  fr.po  hr.po  hu.po  it.po  nl.po  pl.po  pt_BR.po  ru.po  sv.po  tr.po
gfxtheme-pardus-0.11.4/src/: bsplash.inc  common.inc  dia_kernelopts.inc  panel.inc
gfxtheme-pardus-0.11.4/talk/: talk.po
gfxtheme-pardus-0.20/data-boot/: gfxboot.cfg
gfxtheme-pardus-0.20/data-install/: gfxboot.cfg
gfxtheme-pardus-0.20/help-boot/: hu.html
gfxtheme-pardus-0.20/help-install/: bg.html  da.html  hu.html  it.html  pt.html  sl.html
gfxtheme-pardus-0.20/po/: af.po  ar.po  bg.po  bootloader.pot  ca.po  cs.po  da.po  de.po  el.po  es.po  et.po  fi.po  fr.po  gl.po  gu.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ko.po  lt.po  mr.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  ta.po  tr.po  uk.po  wa.po  (+4 more)
gfxtheme-pardus-0.20/src/: common.inc  dia_lang.inc  dia_zorg.inc  main.bc  panel.inc
kdm-pardus-theme-1.6/kdm-pardus-theme-1.6/: GdmGreeterTheme.desktop  theme.xml
kdm-pardus-theme-kde4/kdm-pardus-theme-kde4/: .directory  (+2 more)
ksplash-pardus-theme/: Theme.rc
pardus/: Makefile.am  pardus.script  tarball.sh
plymouth-theme-pardus/: Makefile.am  pardus.plymouth.in  pardus.script  pardus.script.2011  tarball.sh
(+28 files in other folders)
